--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<div class='person' id='jueyang'>
 			Jue, technologist-in-residence. Favorite breakfast: papaya.
 		</div>
+		<div class='person' id='everichite'>
+			Everic White, Urban Reporting Student, Interactive Journalism Neophyte, and Social Media Buddha. Life Goal: To run thrugh the 6 with his woes.</div>
+		</div>
 	</section>
 </body>
 </html>
